# forklift

./: .gitignore  Cargo.toml  README.md  crawl.toml  script_protocol.md
configs/: html-crawl.toml  picrew.toml
scripts/: base.py  picrew.py  scrape_css.py  scrape_html.py
src/: client.rs  config.rs  lib.rs  main.rs  processor.rs  runner.rs  scripting.rs  utils.rs  warc.rs  writer.rs
src/scripting/: manager.rs  mod.rs  protocol.rs  script.rs
